--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,7 +6,7 @@
    }
  
    h1 {
-     width: 94%;
+     width: 97%;
      font-size: 2rem;
      line-height: 1.9rem;
    }
@@ -22,10 +22,10 @@
      font-size: 1.2rem;
    }
 
-   p{
+   /* p{
       font-size: 1.2rem;
       width: 95%;
-   }
+   } */
 
    #logo h4{
     font-size: 1rem;
@@ -103,11 +103,64 @@
    }
 
    /* ============ HEADER ========== */
+
+   header p{
+    font-size: 1.2rem;
+    width: fit-content;
+   }
+
    header button{
     padding: 1.2rem;
     width: 85%;
     font-size: 1rem;
    }
+
+   /* ============ Main ========== */
+
+   #sobre{
+    padding-top: 6rem;
+   }
+   
+   #sobre h2{
+    font-size: 1.2rem;
+   }
+
+   #sobre p{
+    font-size: 1.2rem;
+   }
+
+   .sobre-text-img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+   
+   .sobre-text-img figure img{
+    width: 17rem;
+    float: none;
+    margin-right: 0;
+    
+   }
+
+   figure{
+    width: 100%;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+   
+   
+  }
+
+   figcaption {
+    color: gray;
+    width: 17rem;
+    display: inline-block;
+  }
+
+
 }
 
 /* ================= MEDIA QUERIES (phones) ============== */
