--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@
  body {
    font-family: "Montserrat", sans-serif;
    color: var(--color-white);
-   /* background-color: var(--color-bg); */
  }
  
  .container {
@@ -63,11 +62,6 @@ nav {
    background: var(--color-primary);
 
  }
- /* change navbar style on scroll using javascript */
- /* .window-scroll {
-   background: var(--color-primary);
-   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
- } */
  
  .nav_container {
    height: 100%;
@@ -79,7 +73,7 @@ nav {
  #logo{
   display:flex ;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
   font-size: 1.2rem;
  }
 
@@ -125,15 +119,15 @@ header{
 
 h1{
   letter-spacing: 1px;
-  width: 48%;
+  width: 70%;
   color: var(--color-white);
   text-align: center;
-  font-size: 4.8rem;
+  font-size: 5rem;
   line-height: 4rem;
    
 }
 
-p{
+header p{
   text-align: center;
   width: 45%;
   font-size: 2rem;
@@ -147,14 +141,46 @@ header button{
   font-size: 1.5rem;
   border-radius: 8px;
   color: var(--color-white);
-
   font-weight: 700;
   background: var(--color-success) ;
 }
 
 /* =========== MAIN =========== */
 
-.la{
-  height: 100vh;
+
+#sobre{
+  padding-top: 7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+#sobre h2{
+  color: var(--color-success);
+  text-align: center;
+  font-size: 2.3rem;
+}
+
+#sobre p{
+  color: var(--color-black);
   width: 100%;
+  text-align: left;
+  font-size: 1.6rem;
+}
+
+.sobre-text-img figure img{
+  width: 30rem;
+  height: fit-content; 
+  border-radius: 8px;
+  border: 5px solid gainsboro; 
+  float: left;
+  margin-right: 2rem;
+}
+
+.sobre-text-img .float figure img{
+  float: none;
+}
+
+figcaption {
+display: none;
 }
