--- a/css/style.css
+++ b/css/style.css
@@ -177,10 +177,23 @@ header button{
   margin-right: 2rem;
 }
 
-.sobre-text-img .float figure img{
-  float: none;
-}
+
+.sobre-text-img.float figure img{
+  float: right;
+  margin-left: 1rem;
+} 
 
 figcaption {
 display: none;
+}
+
+#eventos{
+  padding-top: 7rem;
+  
+}
+
+#eventos h2{
+  color: var(--color-success);
+  text-align: center;
+  font-size: 2.3rem;
 }
