--- a/css/responsive.css
+++ b/css/responsive.css
@@ -110,8 +110,8 @@
    }
 
    header a{
-    padding: 1.2rem;
-    width: 85%;
+    padding: 1.4rem;
+    width: fit-content;
     font-size: 1rem;
    }
 
