--- a/css/responsive.css
+++ b/css/responsive.css
@@ -180,6 +180,10 @@
     padding: 1.5rem;
   }
 
+  footer div ul li a{
+    font-size: 1.2rem;
+  }
+
   footer .footer-container img{
     display: none;
   }
